--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <h2>1. Administrator danych</h2>
   <p>Administratorem danych jest: <strong>InfotechGo</strong></p>
-  <p>Kontakt: <strong>[wstaw swój e-mail kontaktowy]</strong></p>
+  <p>Kontakt: <strong>mateusz.gbur@infotech.edu.pl</strong></p>
 
   <h2>2. Zakres zbieranych danych</h2>
   <p>Aplikacja InfotechGo nie wymaga podawania danych osobowych do korzystania z podstawowej funkcjonalności. Użytkownicy mogą korzystać z aplikacji jako gość.</p>
@@ -44,7 +44,7 @@
   <p>Stosujemy zabezpieczenia techniczne takie jak szyfrowanie połączeń (SSL), kontrola dostępu i autoryzacja po stronie serwera.</p>
 
   <h2>7. Prawa użytkownika</h2>
-  <p>Użytkownik ma prawo dostępu do swoich danych, ich poprawienia, usunięcia lub ograniczenia przetwarzania. Kontakt w tej sprawie: <strong>[Twój e-mail]</strong>.</p>
+  <p>Użytkownik ma prawo dostępu do swoich danych, ich poprawienia, usunięcia lub ograniczenia przetwarzania. Kontakt w tej sprawie: <strong>mateusz.gbur@infotech.edu.pl</strong>.</p>
 
   <h2>8. Pliki cookies</h2>
   <p>Aplikacja InfotechGo nie korzysta z plików cookies ani technologii śledzących.</p>
@@ -53,6 +53,6 @@
   <p>Zastrzegamy sobie prawo do aktualizacji niniejszej polityki. Zmiany będą publikowane na tej stronie.</p>
 
   <h2>10. Kontakt</h2>
-  <p>W razie pytań dotyczących polityki prywatności prosimy o kontakt pod adresem: <strong>[Twój e-mail]</strong>.</p>
+  <p>W razie pytań dotyczących polityki prywatności prosimy o kontakt pod adresem: <strong>mateusz.gbur@infotech.edu.pl</strong>.</p>
 </body>
 </html>
